<resources>
    <string name="app_name">EMG Signal Analysis</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">EMG</string>
    <string name="nav_header_subtitle">Electromyography</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_saved_data">Saved Data</string>
    <string name="menu_add_user">Add User</string>
    <string name="menu_add_sensor">Add Sensor</string>

    <string name="no_device">&lt;Select a device&gt;</string>
    <string name="select_device">Select a device</string>
    <string name="status">Status</string>
    <string name="llsWrite">LinkLossAlert</string>
    <string name="iasWrite">ImmediateAlert</string>
    <string name="scanning">Scanning for devices...</string>
    <string name="no_ble_devices">No LE devices found.</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Not connected</string>
    <string name="ready">Ready</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">connect</string>
    <string name="unpair">unpair</string>
    <string name="pair">pair</string>
    <string name="RadioButton1">Alert level high</string>
    <string name="RadioButton2">Alert level mid</string>
    <string name="RadioButton3">Stop alerting</string>
    <string name="SystemId">SystemId</string>
    <string name="ModelNumber">ModelNumber</string>
    <string name="SerialNumber">SerialNumber</string>
    <string name="FirmwareRevision">FirmwareRevision</string>
    <string name="HardwareRevision">HardwareRevision</string>
    <string name="SoftwareRevision">SoftwareRevision</string>
    <string name="ManufactureName">ManufactureName</string>
    <string name="RegCertDataList">RegCertDataList</string>
    <string name="ManufactureId">    ManufactureId</string>
    <string name="BatteryLevel">    Battery Level</string>
    <string name="OrgId">    OrganizationId</string>
    <string name="Txpower">    Txpower Level</string>
    <string name="Noupdate">    No Update</string>
    <string name="ReadTxPower">ReadTxPower</string>
    <string name="high_alert">HIGH Alert triggered!</string>
    <string name="low_alert">LOW Alert triggered!</string>
    <string name="writeTxnoti">TxNoti</string>
    <string name="readRssi">Read Rssi Value</string>
    <string name="Readdummy">D Read</string>
    <string name="removeBond">Remove Bond</string>
    <string name="paired">paired</string>
    <string name="popup_title1">QUIT</string>
    <string name="popup_message">Do you want to quit this Application?</string>
    <string name="popup_yes">YES</string>
    <string name="popup_no">NO</string>
    <string name="popup_title2">SAVE</string>
    <string name="popup_message2">Do you want to save to a new file or overwrite an existing one?</string>
    <string name="popup_new">NEW</string>
    <string name="popup_overwrite">OVERWRITE</string>
    <string name="popup_cancel">CANCEL</string>
    <string name="ble_not_supported">Bluetooth Low Energy not supported</string>
    <string name="scan">Scan</string>
    <string name="cancel">Cancel</string>
    <string name="not_connected">Not Connected</string>
    <string name="updated">Updated</string>
    <string name="temperature">Temperature (°C)</string>
    <string name="flow">Flow:</string>
    <string name="ph">pH:</string>
    <string name="turbidity">Turbidity:</string>
    <string name="domainSeries">Time (ms)</string>
    <string name="rangeSeries">Amplitude (V)</string>
    <string name="amplitude_mv">Amplitude (mV)</string>
    <string name="timer">00 sec</string>
    <string name="saved_info">Saved Info</string>
    <string name="testee">Testee</string>
    <string name="height">Height (cm)</string>
    <string name="weight">Weight (kg)</string>
    <string name="sensor">Sensor Information</string>
    <string name="humid">Relative humidity (RH%)</string>
    <string name="body_resistance">Body Resistance (KOhm)</string>
    <string name="centimeter">cm</string>
    <string name="name">Name</string>
    <string name="TypeSensor">Type of Sensor</string>
    <string name="kilogram">kg</string>
    <string name="resistance">Resistance (KOhm)</string>
    <string name="environment">Environment</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="middle">Middle electrode</string>
    <string name="end">End electrode</string>
    <string name="reference">Reference electrode</string>
    <string name="frequencydomain">Frequency (Hz)</string>
    <string name="FFTamp">Amplitude (FFT UNIT)</string>
    <string name="DBamp">Amplitude (dB/Hz)</string>
    <string name="user">User Information</string>
    <string name="birthday">Date of birth</string>
    <string name="add_user">Add user</string>
    <string name="add_sensor">Add Sensor</string>
    <string name="format_date">dd/mm/yyyy</string>
    <string name="sensor_name">Sensor</string>
    <string name="enter_temp">Enter temperature at the moment</string>
    <string name="enter_humid">Enter humidity at the moment</string>
    <string name="menu_info">Information</string>
    <string name="fit_amplitude">Fit Amplitude</string>

    <string-array name="FFTgraphs">
        <item>FFT Unit</item>
        <item>DB/Hz</item>
    </string-array>
</resources>
