<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/icon_home"
            android:title="@string/menu_home"/>
        <item
        android:id="@+id/menu_saved_data"
        android:icon="@drawable/icon_saved_data"
        android:title="@string/menu_saved_data" />
        <item
            android:id="@+id/menu_add_user"
            android:icon="@drawable/icon_user"
            android:title="@string/menu_add_user" />
        <item
            android:id="@+id/menu_add_sensor"
            android:icon="@drawable/icon_sensor"
            android:title="@string/menu_add_sensor" />
        <item
            android:id="@+id/menu_info"
            android:icon="@drawable/icon_info"
            android:title="@string/menu_info" />
    </group>
</menu>
