<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sensor"
        android:textSize="@dimen/text_title"
        android:textStyle="bold"
        android:background="@color/colorPrimary"
        android:textColor="@color/ap_white"
        android:paddingLeft="@dimen/normal_padding"
        android:paddingTop="@dimen/normal_padding"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_dialog_text"
        android:layout_margin="@dimen/general_margin"
        android:orientation="vertical"
        android:padding="@dimen/normal_padding">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TypeSensor"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_small"
            android:padding="@dimen/mini_padding"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/typeSensor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="@dimen/small_padding"
            android:textSize="@dimen/text_small"
            android:maxLines="1"
            android:hint="Enter name of sensor"
            android:background="@drawable/background_spinner"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resistance"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_small"
            android:padding="@dimen/small_padding"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/general_margin">
            <TableRow
                android:id="@+id/row_middle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_padding">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/middle"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_small"
                android:padding="@dimen/mini_padding"/>
            <EditText
                android:id="@+id/res_m"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="@dimen/small_padding"
                android:textSize="@dimen/text_small"
                android:maxLines="1"
                android:inputType="number"
                android:layout_weight="1"
                android:background="@drawable/background_spinner"/>
        </TableRow>

            <TableRow
                android:id="@+id/row_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_padding">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/text_small"
                    android:padding="@dimen/mini_padding" />
                <EditText
                    android:id="@+id/res_e"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/small_padding"
                    android:textSize="@dimen/text_small"
                    android:maxLines="1"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:background="@drawable/background_spinner"
                    />
            </TableRow>

            <TableRow
                android:id="@+id/row_ref"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reference"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/text_small"
                    android:padding="@dimen/mini_padding" />
                <EditText
                    android:id="@+id/res_r"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/small_padding"
                    android:textSize="@dimen/text_small"
                    android:maxLines="1"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:background="@drawable/background_spinner"/>
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/btn_addSensor"
            android:layout_width="@dimen/sizeButton"
            android:layout_height="wrap_content"
            android:background="@drawable/clicked_button"
            android:text="@string/add_sensor"
            android:textColor="@color/ap_white"
            android:textSize="@dimen/text_small"
            android:layout_marginTop="@dimen/general_margin"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</LinearLayout>