<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/dialog">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saved_info"
        android:textSize="@dimen/text_normal"
        android:textStyle="bold"
        android:textColor="@color/ap_white"/>

    <LinearLayout
        android:layout_width="@dimen/size_dialog"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_text"
        android:layout_margin="@dimen/mini_padding"
        android:orientation="vertical"
        android:padding="@dimen/small_padding"
        android:gravity="center_horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/testee"
                android:textColor="@color/ap_white"
                android:textSize="@dimen/text_small"
                android:padding="@dimen/mini_padding"
                android:background="@drawable/bg_text_title"
                android:textStyle="bold"
                android:gravity="center_horizontal"/>
            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_spinner"
                android:paddingLeft="@dimen/small_padding"
                android:paddingRight="@dimen/small_padding"
                android:layout_marginLeft="@dimen/small_padding"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/small_padding">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sensor_name"
                android:textColor="@color/ap_white"
                android:textSize="@dimen/text_small"
                android:padding="@dimen/mini_padding"
                android:background="@drawable/bg_text_title"
                android:textStyle="bold"
                android:gravity="center_horizontal"/>
            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_spinner"
                android:paddingLeft="@dimen/small_padding"
                android:paddingRight="@dimen/small_padding"
                android:layout_marginLeft="@dimen/small_padding"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/small_padding">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/temperature"
                android:textColor="@color/ap_white"
                android:textSize="@dimen/text_small"
                android:padding="@dimen/mini_padding"
                android:background="@drawable/bg_text_title"
                android:textStyle="bold"
                android:gravity="center_horizontal"/>
            <EditText
                android:id="@+id/temp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:padding="@dimen/mini_padding"
                android:textSize="@dimen/text_small"
                android:layout_marginLeft="@dimen/small_padding"
                android:background="@drawable/background_spinner"
                android:inputType="number"
                android:hint="@string/enter_temp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/small_padding">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/humid"
                android:textColor="@color/ap_white"
                android:textSize="@dimen/text_small"
                android:padding="@dimen/mini_padding"
                android:background="@drawable/bg_text_title"
                android:textStyle="bold"
                android:gravity="center_horizontal"/>
            <EditText
                android:id="@+id/humid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:padding="@dimen/mini_padding"
                android:textSize="@dimen/text_small"
                android:inputType="number"
                android:background="@drawable/background_spinner"
                android:layout_marginLeft="@dimen/small_padding"
                android:hint="@string/enter_humid"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/small_padding">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Note"
                android:textColor="@color/ap_white"
                android:textSize="@dimen/text_small"
                android:padding="@dimen/mini_padding"
                android:background="@drawable/bg_text_title"
                android:textStyle="bold"
                android:gravity="center_horizontal"/>
            <EditText
                android:id="@+id/etNotes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:padding="@dimen/mini_padding"
                android:textSize="@dimen/text_small"
                android:background="@drawable/background_spinner"
                android:layout_marginLeft="@dimen/small_padding"
                android:hint="Enter your notes"
                />
        </LinearLayout>
        <Button
            android:id="@+id/Dialog_btnSave"
            android:layout_width="@dimen/sizeButton"
            android:layout_height="wrap_content"
            android:background="@drawable/clicked_button"
            android:text="@string/save"
            android:textColor="@color/ap_white"
            android:textSize="@dimen/text_small"
            android:layout_marginTop="@dimen/small_padding"/>

    </LinearLayout>

</LinearLayout>