<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorPrimary">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="User Information"
            android:textSize="@dimen/text_title"
            android:textStyle="bold"
            android:background="@color/colorPrimary"
            android:padding="@dimen/small_padding"
            android:textColor="@color/ap_white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_dialog_text"
        android:layout_margin="@dimen/mini_padding"
        android:orientation="vertical"
        android:padding="@dimen/normal_padding"
        android:gravity="center_horizontal">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" android:layout_marginBottom="@dimen/general_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_small"
                android:padding="@dimen/small_padding"/>
            <EditText
                android:id="@+id/testee_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="@dimen/small_padding"
                android:textSize="@dimen/text_small"
                android:inputType="text"
                android:maxLines="1"
                />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" android:layout_marginBottom="@dimen/general_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Date of birth"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_small"
                android:padding="@dimen/small_padding"/>
            <EditText
                android:id="@+id/testee_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="@dimen/small_padding"
                android:textSize="@dimen/text_small"
                android:inputType="text"
                android:maxLines="1"
                android:hint="dd/mm/yyyy"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/general_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_small"
                android:padding="@dimen/small_padding"/>
            <EditText
                android:id="@+id/testee_height"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="@dimen/small_padding"
                android:textSize="@dimen/text_small"
                android:inputType="number"
                android:maxLines="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_small"
                android:padding="@dimen/small_padding"/>
            <EditText
                android:id="@+id/testee_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="@dimen/small_padding"
                android:textSize="@dimen/text_small"
                android:inputType="number"
                android:maxLines="1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/general_margin"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/body_resistance"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_small"
                android:padding="@dimen/small_padding"/>
            <EditText
                android:id="@+id/testee_R"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="@dimen/small_padding"
                android:textSize="@dimen/text_small"
                android:inputType="number"
                android:maxLines="1"
                />
        </LinearLayout>
        <Button
            android:id="@+id/btn_next1"
            android:layout_width="@dimen/sizeButton"
            android:layout_height="wrap_content"
            android:background="@drawable/clicked_button"
            android:text="Add user"
            android:textColor="@color/ap_white"
            android:textSize="@dimen/text_small"/>

    </LinearLayout>

</LinearLayout>